--- a/_posts/2019-17-06-3sum.md
+++ b/_posts/2019-17-06-3sum.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "[LeetCode] 15. 3Sum"
-date:   2019-06-16
+date:   2019-06-17
 comments: true
 ---
 
@@ -26,7 +26,7 @@ The solution set must not contain duplicate triplets.
 ]
 
 
-**Iterative Solution:**
+**Solution:**
 
 ```python
 class Solution(object):
