--- a/_posts/2019-14-05-two-sum.md
+++ b/_posts/2019-14-05-two-sum.md
@@ -20,6 +20,10 @@ You may assume that each input would have exactly one solution, and you may not 
 >Because nums[0] + nums[1] = 2 + 7 = 9,
 return [0, 1].
 
+**Company:**
+*Facebook*, *Amazon*, *Google*
+
+
 **Solution:**
 
 ```python
