--- a/_posts/2019-17-06-3sum.md
+++ b/_posts/2019-17-06-3sum.md
@@ -25,6 +25,8 @@ The solution set must not contain duplicate triplets.
   [-1, -1, 2]
 ]
 
+**Company:**
+*Facebook*, *Amazon*, *Microsoft*
 
 **Solution:**
 
